Development

- Show larger thumbnails on one-column layouts

Portfolio Press 1.6

- Update $content_width on full page templates
- Improvements for password protected portfolio posts
- Normalize post meta
- New portfoliopress_posts_per_page filter

Portfolio Press 1.5

- Add single portfolio post navigation back
- Add fullwidth portfolio thumnail size
- Max-width for iframe,embeds and objects
- Better responsive menu
- Author page displays posts and author description

Portfolio Press 1.4.1

- Fixed theme dependency on Options Framework plugin
- Updated inline theme documentation

Portfolio Press 1.4

- Added box shadows to borders
- Max-width for logo image
- Update portfolio-large size to 640px
- Remove prev/next post navigation on single posts and portfolio items
- Add borders around post meta
- Make the full width layout option max-width 780px
- Update screenshot image for retina
- Show titles and descriptions on portfolio taxonomy pages


Portfolio Press 1.3

- Fix for portfolio pages when single column selected
- Allow image galleries to display in archives
- Fix for plugin notices
- Update thumbnail sizing (props @alexkunz)

Portfolio Press 1.2.2

- Fix for image alignment bug (introduced in 1.2)

Portfolio Press 1.2.1

- Fix for JS error that causes scripts to break

Portfolio Press 1.2

- Front end customizer support
- Additional layout option (single column)
- Better CSS for captions and images
- Filterable titles
- Upsell link for Portfolio+ on options page

Portfolio Press 1.1

- Responsive design
- Updated styling

Portfolio Press 1.0

- Fix for search.php template
- Fix for pagination in portfolio page template

Portfolio Press 0.9

- Paging bug fixes for portfolio items
- Fix for missing blockquote image
- Removed portfolio post type code
- Replaced portfolio taxonomy templates with archive-portfolio
- Renamed loop.php to content.php
- Added post format support for quotes, images, and galleries
- Renamed scripts files

Portfolio Press 0.8
