@@ -1,6 +1,7 @@
 Development
 
 - Show larger thumbnails on one-column layouts
+- Increase thumbnail sizes on regular layouts
 
 Portfolio Press 1.6
 
